--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <h1 class="centered">{{title}}</h1>
 
 <div class="centered">
-  <a class="btn light-blue waves-effect waves-light spaced" [routerLink]="['/']">Home</a> 
-  <a class="btn light-blue waves-effect waves-light spaced" [routerLink]="['/productList']">Product List</a> 
-  <a class="btn light-blue waves-effect waves-light spaced" [routerLink]="['/productCreation']">Product Creation</a> 
+  <a class="btn waves-effect waves-light spaced " [routerLink]="['/']">Home</a> 
+  <a class="btn waves-effect waves-light spaced " [routerLink]="['/productList']">Product List</a> 
+  <a class="btn waves-effect waves-light spaced " [routerLink]="['/productCreation']">Product Creation</a> 
 </div>
 
 <router-outlet></router-outlet>
