--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,8 @@
 <div class="component">
 	<h3 class="centered">{{title}}</h3>
-
 	<h5 class="centered">Welcome to the Project Product Management. Here we can manage a set of products. You are able to create new products, remove old products and edit products!</h5>
 </div>
 
 <div class="main">
-	<img class="pic" src="https://images.unsplash.com/photo-1470173274384-c4e8e2f9ea4c?dpr=0.800000011920929&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=">
+	<img class="pic" src="./assets/helloquence-61189.jpg">
 </div>
