--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,21 +1,32 @@
 <div class="component">
-	<h3>Product List</h3>
+	<h3>Product List:</h3>
 
 	<div class="row">
-	    <div class="col s12 m4 hoverable" *ngFor="let item of subscriptionItems; let idx = index">
-	        <div class="card">
+	    <div class="col s12 m4" *ngFor="let item of subscriptionItems; let idx = index">
+	        <div class="card hoverable">
 		        <div class="card-image">
-		          <img src="{{item.image}}">
+		          <img style="height: 240px;" src="{{item.image}}">
 		        </div>
-		        <div class="card-content">
-		          <h4>{{item.title}}</h4>
-		          <h5>{{item.price | currency: 'usd':true }}</h5>
-		          <button (click)="edit(idx)" class="btn green lighten-3 waves-effect waves-light">EDIT</button>
-		          <button (click)="delete(idx)" class="btn red waves-effect waves-light">DELETE</button>
+		        <div class="card-content" style="padding-top: 0px;">
+							<div class="row">
+								<div class="col s12 m12 centered custom">
+									<h4>{{item.title}}</h4>
+									<h5>{{item.price | currency: 'usd':true }}</h5>
+									<button (click)="edit(idx)" class="btn waves-effect waves-light margin ">EDIT</button>
+									<button (click)="delete(idx)" class="btn red waves-effect waves-light">DELETE</button>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col s12 m12">
+									<h5 class="location"><em>Item Location:</em></h5>
+									<iframe width="100%" height="350" frameborder="0" style="border:1"
+ 										[src]="sanitize(item.location)" allowfullscreen>
+									</iframe>
+								</div>
+							</div>
 		        </div>
 	        </div>
 	    </div>
-    </div>
-
+  </div>
 </div>
 
