Updated edit page and product list

--- a/src/app/product-creation/product-creation.component.html
+++ b/src/app/product-creation/product-creation.component.html
@@ -1,35 +1,44 @@
 <div class="component">
-	<h3 style="margin-bottom: 50px;">Create a New Product</h3>
+	<div class="row">
 
-	<form (ngSubmit)="onSubmit($event)">
-
-	 	<div class="input-field">
-			<input required minlength="2" type="text" name="title" id="title" [(ngModel)]='item.title' #title="ngModel">
-			<label for="title">Title</label>
-			<div style="color: red; display: inline-block;" *ngIf="title.errors"><i>*Required and must be at least 2 characters long</i></div>
-    	</div>
-
-		<div class="input-field">
-			<input required type="number" name="price" id="price" [(ngModel)]='item.price' #price="ngModel">
-			<label for="price">Price</label>
-			<div style="color: red; display: inline-block;" *ngIf="price.errors"><i>*Price is required</i></div>
+		<div class="col s12 m6">
+			<h3 style="margin-bottom: 50px;">Create a New Product</h3>
+			<form (ngSubmit)="onSubmit($event)">
+				<div class="input-field">
+					<input required minlength="2" type="text" name="title" id="title" [(ngModel)]='item.title' #title="ngModel">
+					<label for="title">Title</label>
+					<div style="color: red; display: inline-block;" *ngIf="title.errors"><i>*Required and must be at least 2 characters long</i></div>
+				</div>
+				<div class="input-field">
+					<input required type="number" name="price" id="price" [(ngModel)]='item.price' #price="ngModel">
+					<label for="price">Price</label>
+					<div style="color: red; display: inline-block;" *ngIf="price.errors"><i>*Price is required</i></div>
+				</div>
+				<div class="input-field">
+					<input required type="text" name="description" id="description" minlength="10" [(ngModel)]='item.description' #description="ngModel">
+					<label for="description">Item Description</label>
+					<div style="color: red; display: inline-block;" *ngIf="description.errors"><i>*Description is required and must be at least 10 characters long</i></div>
+				</div>
+				<div class="input-field">
+					<input required type="text" name="image" id="img" [(ngModel)]='item.image' #image="ngModel">
+					<label for="img">Image URL</label>
+					<div style="color: red; display: inline-block;" *ngIf="image.errors"><i>*Image is required</i></div>
+				</div>
+				<div class="input-field">
+					<input required minlength="2" type="text" name="location" id="location" [(ngModel)]='item.location' #location="ngModel">
+					<label for="img">Item Location</label>
+					<div style="color: red; display: inline-block;" *ngIf="location.errors"><i>*Required and must be at least 2 characters long</i></div>
+				</div>
+				<input *ngIf="title.valid && price.valid && image.valid && location.valid && description.valid; else dis" style="margin-top: 20px; width: 50%; height: 50px;" class="btn waves-effect waves-light" type="submit" value="CREATE">
+				<ng-template #dis>
+					<input *ngIf="title.invalid || price.invalid || image.invalid || location.invalid || description.invalid" style="margin-top: 20px; width: 50%; height: 50px;" class="btn" type="submit" value="CREATE" disabled>
+				</ng-template>
+			</form>
 		</div>
-
-		<div class="input-field">
-			<input required type="text" name="image" id="img" [(ngModel)]='item.image' #image="ngModel">
-			<label for="img">Image URL</label>
-			<div style="color: red; display: inline-block;" *ngIf="image.errors"><i>*Image is required</i></div>
+		<div class="col s12 m6 image" style="margin-top: 70px;">
+			<h4 class="quote">"True innovation is coming up with a product that the customer didn't even know they needed"</h4>				
+			<img class="pic darken" src="./assets/rawpixel-com-247282.jpg">
 		</div>
+	</div>
 
-		<div class="input-field">
-			<input required minlength="2" type="text" name="location" id="location" [(ngModel)]='item.location' #location="ngModel">
-			<label for="img">Item Location</label>
-			<div style="color: red; display: inline-block;" *ngIf="location.errors"><i>*Required and must be at least 2 characters long</i></div>
-		</div>
-		
-		<input *ngIf="title.valid && price.valid && image.valid && location.valid; else dis" style="margin-top: 20px;" class="btn waves-effect waves-light" type="submit" value="CREATE">
-		<ng-template #dis>
-			<input *ngIf="title.invalid || price.invalid || image.invalid || location.invalid" style="margin-top: 20px;" class="btn" type="submit" value="CREATE" disabled>
-		</ng-template>
-	</form>
 </div>
