--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="component">
 	<h3 class="centered">{{title}}</h3>
-	<h5 class="centered">Welcome to the Project Product Management. Here we can manage a set of products. You are able to create new products, remove old products and edit products!</h5>
+	<h5 class="centered">Welcome to Project Product Management. Here we can manage a set of products. You are able to create new products, remove old products and edit products!</h5>
 </div>
 
 <div class="main">
