--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -4,18 +4,22 @@
 	<div class="row">
 	    <div class="col s12 m4" *ngFor="let item of subscriptionItems; let idx = index">
 	        <div class="card hoverable">
+				<h4 class="img">{{item.title}}</h4>
 		        <div class="card-image">
 		          <img style="height: 240px;" src="{{item.image}}">
 		        </div>
-		        <div class="card-content" style="padding-top: 0px;">
+		        <div class="card-content" style="padding-top: 12px;">
 							<div class="row">
-								<div class="col s12 m12 centered custom">
-									<h4>{{item.title}}</h4>
-									<h5>{{item.price | currency: 'usd':true }}</h5>
-									<button (click)="edit(idx)" class="btn waves-effect waves-light margin ">EDIT</button>
-									<button (click)="delete(idx)" class="btn red waves-effect waves-light">DELETE</button>
+								<div class="col s12 m9 custom">
+									<h5 style="padding-bottom: 10px;">{{item.price | currency: 'usd':true }}</h5>
+									<p><strong>{{item.description}}</strong></p>
+								</div>
+								<div class="col s12 m3 desc">
+									<div class="cent"><button (click)="edit(idx)" class="btn waves-effect waves-light margin ">EDIT</button></div>
+									<div class="cent"><button (click)="delete(idx)" class="btn red waves-effect waves-light ">DELETE</button></div>
 								</div>
 							</div>
+							<hr>
 							<div class="row">
 								<div class="col s12 m12">
 									<h5 class="location"><em>Item Location:</em></h5>
