Updated edit page with product description field

--- a/src/app/product-edit/product-edit.component.html
+++ b/src/app/product-edit/product-edit.component.html
@@ -10,6 +10,10 @@
 			<div style="color: red; display: inline-block;" *ngIf="price.errors"><i>*Price is required</i></div>
 		</div>
 		<div>
+			<p>Item Description: <input [(ngModel)]='currentItem.description' #description="ngModel" required type="text" name="description" placeholder="{{currentItem.description}}"></p>
+			<div style="color: red; display: inline-block;" *ngIf="description.errors"><i>*description is required</i></div>
+		</div>
+		<div>
 			<p>Image URL: <input [(ngModel)]='currentItem.image' #image="ngModel" required type="text" name="image" placeholder="{{currentItem.image}}"></p>
 			<div style="color: red; display: inline-block;" *ngIf="image.errors"><i>*Image is required</i></div>
 		</div>
@@ -18,9 +22,9 @@
 			<div style="color: red; display: inline-block;" *ngIf="location.errors"><i>*Image is required</i></div>
 		</div>
 
-		<input *ngIf="title.valid && price.valid && image.valid && location.valid; else dis" style="margin-top: 20px;" class="btn light-blue waves-effect waves-light" type="submit" value="UPDATE">
+		<input *ngIf="title.valid && price.valid && image.valid && location.valid && description.valid; else dis" style="margin-top: 20px;" class="btn light-blue waves-effect waves-light" type="submit" value="UPDATE">
 		<ng-template #dis>
-			<input *ngIf="title.invalid || price.invalid || image.invalid || location.invalid" style="margin-top: 20px;" class="btn" type="submit" value="UPDATE" disabled>
+			<input *ngIf="title.invalid || price.invalid || image.invalid || location.invalid || description.invalid" style="margin-top: 20px;" class="btn" type="submit" value="UPDATE" disabled>
 		</ng-template>	
 		<button (click)="back()" class="btn red waves-effect waves-light" style="margin-top: 20px; float:right">BACK</button>
 	</form>
